{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 261,
  "lineage": "27611d9f-f7e4-743d-7f21-22bc4a5dc95e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "devops-test-app-webserver-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:184062889021:listener/net/devops-test-dev--public-lb/660bf948901c2f7c/73eb63194898c3f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:184062889021:targetgroup/dev--webserver-lb-target-group/ed5bdb6c92a65443",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:184062889021:listener/net/devops-test-dev--public-lb/660bf948901c2f7c/73eb63194898c3f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:184062889021:loadbalancer/net/devops-test-dev--public-lb/660bf948901c2f7c",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops-test-app-public-lb",
            "aws_lb_target_group.devops-test-app-webserver-lb-target-group",
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "devops-test-app-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aeadef98dc58f86b",
            "association_id": "eipassoc-05c4db883c3eeaaf7",
            "domain": "vpc",
            "id": "eipalloc-0aeadef98dc58f86b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0de29a13a431c5490",
            "private_dns": "ip-10-2-2-167.eu-central-1.compute.internal",
            "private_ip": "10.2.2.167",
            "public_dns": "ec2-18-193-245-175.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.193.245.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--nat-eip"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.devops-test-app-igw",
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops-test-app-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:internet-gateway/igw-04aa5d6b0871e3112",
            "id": "igw-04aa5d6b0871e3112",
            "owner_id": "184062889021",
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--igw"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--igw"
            },
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "dependencies": [
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops-test-app-public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:184062889021:loadbalancer/net/devops-test-dev--public-lb/660bf948901c2f7c",
            "arn_suffix": "net/devops-test-dev--public-lb/660bf948901c2f7c",
            "dns_name": "devops-test-dev--public-lb-660bf948901c2f7c.elb.eu-central-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:184062889021:loadbalancer/net/devops-test-dev--public-lb/660bf948901c2f7c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "devops-test-dev--public-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c8483296f3657975"
              }
            ],
            "subnets": [
              "subnet-0c8483296f3657975"
            ],
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--public-lb"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--public-lb"
            },
            "vpc_id": "vpc-02baf1da1e64cca7c",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "dependencies": [
            "aws_subnet.devops-test-app-public-subnet",
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops-test-app-webserver-lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:184062889021:targetgroup/dev--webserver-lb-target-group/ed5bdb6c92a65443",
            "arn_suffix": "targetgroup/dev--webserver-lb-target-group/ed5bdb6c92a65443",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:184062889021:targetgroup/dev--webserver-lb-target-group/ed5bdb6c92a65443",
            "lambda_multi_value_headers_enabled": false,
            "name": "dev--webserver-lb-target-group",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--webserver-lb-target-group"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--webserver-lb-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "dependencies": [
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "devops-test-app-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aeadef98dc58f86b",
            "connectivity_type": "public",
            "id": "nat-016f9496661d6fa2f",
            "network_interface_id": "eni-0de29a13a431c5490",
            "private_ip": "10.2.2.167",
            "public_ip": "18.193.245.175",
            "subnet_id": "subnet-0c8483296f3657975",
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--nat-gateway"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.devops-test-app-nat-eip",
            "aws_internet_gateway.devops-test-app-igw",
            "aws_subnet.devops-test-app-public-subnet",
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-test-app-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:route-table/rtb-07d6064a8c7aaabe5",
            "id": "rtb-07d6064a8c7aaabe5",
            "owner_id": "184062889021",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-016f9496661d6fa2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--backend-rt"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--backend-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.devops-test-app-nat-eip",
            "aws_internet_gateway.devops-test-app-igw",
            "aws_nat_gateway.devops-test-app-nat-gateway",
            "aws_subnet.devops-test-app-public-subnet",
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-test-app-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:route-table/rtb-0178f10dd930baa75",
            "id": "rtb-0178f10dd930baa75",
            "owner_id": "184062889021",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04aa5d6b0871e3112",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--public-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops-test-app-igw",
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051b79f44704df10e",
            "route_table_id": "rtb-0178f10dd930baa75",
            "subnet_id": "subnet-0c8483296f3657975"
          },
          "dependencies": [
            "aws_internet_gateway.devops-test-app-igw",
            "aws_route_table.devops-test-app-public-route-table",
            "aws_subnet.devops-test-app-public-subnet",
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1d8a135c9a46f5",
            "route_table_id": "rtb-07d6064a8c7aaabe5",
            "subnet_id": "subnet-061187a968ec61460"
          },
          "dependencies": [
            "aws_eip.devops-test-app-nat-eip",
            "aws_internet_gateway.devops-test-app-igw",
            "aws_nat_gateway.devops-test-app-nat-gateway",
            "aws_route_table.devops-test-app-private-route-table",
            "aws_subnet.devops-test-app-private-subnet",
            "aws_subnet.devops-test-app-public-subnet",
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-app-transfer-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:security-group/sg-0005de7376fb271b3",
            "description": "sftp server security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0005de7376fb271b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220717140841678600000002",
            "name_prefix": "terraform-",
            "owner_id": "184062889021",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--transfer-server-sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--transfer-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-queue-worker-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:security-group/sg-05a06bf2ec71c5969",
            "description": "queue worker security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a06bf2ec71c5969",
            "ingress": [],
            "name": "terraform-20220717140841676200000001",
            "name_prefix": "terraform-",
            "owner_id": "184062889021",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--web-queue-worker-security-group"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--web-queue-worker-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-web-server-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:security-group/sg-07785e798f1ebf9bf",
            "description": "Web server security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07785e798f1ebf9bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220717140841684600000003",
            "name_prefix": "terraform-",
            "owner_id": "184062889021",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--web-server-security-group"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--web-server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-app-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-app-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:subnet/subnet-061187a968ec61460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061187a968ec61460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184062889021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--private-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--private-subnet"
            },
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "dependencies": [
            "aws_vpc.devops-test-app-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-app-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:subnet/subnet-0c8483296f3657975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8483296f3657975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "184062889021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--public-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--public-subnet"
            },
            "vpc_id": "vpc-02baf1da1e64cca7c"
          },
          "dependencies": [
            "aws_vpc.devops-test-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops-test-app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184062889021:vpc/vpc-02baf1da1e64cca7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-06a44b68ef2e0bce0",
            "default_route_table_id": "rtb-01452ffc1d83adb88",
            "default_security_group_id": "sg-07212dd3a2d73c64a",
            "dhcp_options_id": "dopt-1538bf7f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02baf1da1e64cca7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01452ffc1d83adb88",
            "owner_id": "184062889021",
            "tags": {
              "Environment": "development",
              "Name": "devops-test-dev--vpc"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devops-test-dev--vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}